2018-01-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.in (PKG_LIBS): Set 'CXX_STD = CXX98' to avoid g++
	whining about dynamic exception specification which C++11 dislikes

2017-12-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version

2017-12-23  Jeroen Ooms  <jeroenooms@gmail.com>

	* src/Makevars.win: Support native Windows builds
	* tools/winlibs.R: Fetch Windows files if needed
	* .Rbuildignore: Ignore top-level windows/ directory
	* .gitignore: Idem

2017-09-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.3

	* vignettes/RcppGSL-intro.Rmd: Now typset in two-column mode

	* tests/doRUnit.R: Small edits and improvements

2017-09-23  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-intro.Rmd: Converted to Rmd, uses pinp

	* DESCRIPTION: Updated Suggests: and VignetteBuilder:
	* .travis.yml (before_install): Install r-cran-pinp
	* cleanup: Extended

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https for curl fetch

2017-04-03  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R (.onLoad): Check for gsl-config at run-time too

2017-03-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.2
	* DESCRIPTION (Description): Reworded and shortened

	* src/init.c (R_init_RcppGSL): Call R_registerRoutines()
	and R_useDynamicSymbols()

	* NAMESPACE: Use .registration=TRUE on useDynLib

	* R/fastLm.R (fastLmPure): Use PACKAGE= with .Call()

	* README.md: One more canonical URL

2017-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/skeleton/configure (GSL_LIBS): No longer need RCPP_LIBS
	* inst/skeleton/configure.win (GSL_LIBS): Idem
	* inst/skeleton/Makevars.in (PKG_CPPFLAGS): Idem
	* inst/skeleton/Makevars.win (PKG_LIBS): Idem

	* R/inline.R: Updated / edited

2016-10-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.1
