@@ -1,7 +1,4 @@
 
-# We use dynamic exception specifications which are a C++98 thing
-CXX_STD = CXX98
-
 # set by configure
 GSL_CFLAGS = @GSL_CFLAGS@
 GSL_LIBS   = @GSL_LIBS@
